# modatasar-m

./: .cursorrules  .cursorrules.json  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  ALL_CHANGES_SUMMARY.md  CHANGELOG.md  COMPLETE_GUIDE.md  CONTRIBUTING.md  CRITICAL_FIXES.md  CURSOR_GUIDE.md  DASHBOARD_BUTTON_FIXED.md  DOCUMENTATION.md  Dockerfile  FEATURE_TEMPLATE.md  FINAL_CHECKLIST.md  FINAL_CHECKLIST_BEFORE_RESTART.md  FINAL_REPORT.md  FINAL_TEST_SUMMARY.md  FIXES_APPLIED.md  FIX_AND_RUN.md  LICENSE  LUTFEN_MANUEL_CALISTIRIN.md  MIGRATION_BASARILI_BACKEND_HATALARI_VAR.md  MIGRATION_GUIDE.md  MIGRATION_STEPS.md  PROJECT_SUMMARY.md  README.md  README_BILGISAYAR_KAPALI_AÇILI_SONRA.md  READY_TO_RUN.md  RESTART_AFTER_GUIDE.md  SETUP_COMPLETED.md  SON_ADIM_MANUEL.md  START_HERE.md  START_SYSTEM.md  TEMPLATE_README.md  TEST_INSTRUCTIONS.md  TEST_REPORT.md  architecture.md  (+15 more)
.github/: dependabot.yml
.husky/: pre-commit
api/: openapi.yaml
docs/: 00-Getting-Started.md  01-Project-Structure.md  02-Dev-Setup.md  03-Architecture.md  04-CICD.md  05-Conventions.md  API.md  API_DOCUMENTATION.md  CI-CD.md  COMPLETE_PROJECT_ANALYSIS.md  CRITICAL_FIXES_NEEDED.md  DB-PERF.md  DEPLOYMENT_GUIDE.md  DR-PLAYBOOK.md  FINAL_CHECK_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_SYSTEM_EQUALITY_REPORT.md  FULL_PROJECT_TEST.md  INCOMPLETE_TASKS_COMPLETION.md  NAVIGATION.md  PERF-WEB.md  PLATFORM_EQUALITY_REPORT.md  ROADMAP.md  USER_GUIDE.md
frontend/desktop/src-tauri/: Cargo.toml
frontend/desktop/src-tauri/src/: main.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  (+6 more)
(+351 files in other folders)
